--- a/website/camera.html
+++ b/website/camera.html
@@ -230,7 +230,7 @@ The BlueBox is a Raspberry Pi device that stores offline lessons for students wi
 
     
     <div class="content-board">
-         <p> The camera setup for this project is based on EbenKouao's GitHub source code, but significant work was needed to enable live streaming on the user interface. This involved installing and updating packages, adjusting the Pi's OS for compatibility with the camera version, and improving the Python code to enhance image quality and ensure compatibility with the latest installed packages.</p>
+         <p> The camera setup for this project is based on EbenKouao's GitHub source code, but significant work was needed to enable live streaming on the user interface. This involved installing and updating packages, using updated commands, adjusting the Pi's OS for compatibility with the camera version, and improving the Python code to enhance video's color quality and ensure compatibility with the latest installed packages.</p>
        </div> 
         
   
